<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackground">

    <androidx.core.widget.NestedScrollView
        style="@style/NestedScrollBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_desc_image"
                android:src="@drawable/ic_image_24" />

            <Button
                android:id="@+id/imageDeleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_image_btn"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/textColorOnDark"
                android:visibility="gone"/>

            <Button
                android:id="@+id/imageChooserBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/textColorOnDark"
                android:text="@string/choose_image_btn" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/colorAccent"
                app:helperText="@string/helper_text_requied"
                app:helperTextTextColor="@color/textColorRequied"
                app:counterEnabled="true"
                app:counterMaxLength="@string/pizza_name_limit_const"
                app:counterTextColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pizza_name_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="@string/pizza_name_limit_const"
                    android:maxLines="1"
                    android:paddingHorizontal="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/colorAccent"
                app:counterEnabled="true"
                app:counterMaxLength="@string/pizza_consist_limit_const"
                app:counterTextColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/consistView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pizza_consist_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="@string/pizza_consist_limit_const"
                    android:maxLines="10"
                    android:paddingHorizontal="5dp"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/priceView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pizza_price_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingHorizontal="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/textColorOnDark"
                android:text="@string/submit_btn" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>